# mini-mesh

./: README.md
MeshDirectedDiffusion/: CMakeLists.txt  FindMeshDirectedDiffusion.cmake  README.md
MeshDirectedDiffusion/AesLibrary/: CMakeLists.txt
MeshDirectedDiffusion/InterfaceFunctions/ESP8266-ESPNOWFiles/: packetTransmissionESPNOW.c  systemDependentHelpFunctionsESP8266FreeRTOSSDK.c
MeshDirectedDiffusion/InterfaceFunctions/Esp8266-nRF24l01Files/: esp8266_spi_pro.c  packetTransmissionESP8266NRF24l01.c  universal_semaphore.c
MeshDirectedDiffusion/InterfaceFunctions/Esp8266WIFI/: packetTransmissionEsp8266WIFI.c
MeshDirectedDiffusion/InterfaceFunctions/STM32H723ZGT6-nRF24l01/: driver_nrf24l01.c  driver_nrf24l01_interface.c  nrf24l01meshDriver.c  packetTransmissionSTMNRF24l01.c  systemDependentHelpFunctions.c  universal_semaphore.c
MeshDirectedDiffusion/InterfaceFunctions/include/: meshSystemConfig.h
MeshDirectedDiffusion/InterfaceFunctions/linux-simulFiles/: CMakeLists.txt  packetTransmissionLINUX-SIMUL.c  simulServer.c  systemDependentHelpFunctionsLINUX.c  universal_semaphoreLINUX.c
MeshDirectedDiffusion/InterfaceFunctions/nRF24l01toWIFIBridge/: driver_nrf24l01.c  driver_nrf24l01_interface.c  nrf24l01meshDriver.c  packetTransmissionESP8266NRF24l01.c  systemDependentHelpFunctionsESP8266FreeRTOSSDK.c
MeshDirectedDiffusion/MeshAPI/: CMakeLists.txt  meshAPI.c
MeshDirectedDiffusion/MeshAPI/include/: meshAPI.h
MeshDirectedDiffusion/PacketQueues/: CMakeLists.txt  PacketsBuffer.c
MeshDirectedDiffusion/PacketQueues/include/: PacketsBuffer.h
MeshDirectedDiffusion/Packets/: CMakeLists.txt  packetEncryption.c  packetsBuilder.c  packetsHandler.c
MeshDirectedDiffusion/Packets/include/: packetEncryption.h  packetStructs.h  packetsBuilder.h  packetsHandler.h  packets_descr.txt
MeshDirectedDiffusion/ProcessesManagement/: CMakeLists.txt  broadcastSelfInformationPacket.c  inputPacketsHandlingProcess.c  meshClock.c  packetReceivedCallback.c  sendInfoRequestPacket.c  systemManagementProcess.c  transmitDataProcess.c
MeshDirectedDiffusion/ProcessesManagement/include/: meshLibraryProcesses.h
MeshDirectedDiffusion/System/: CMakeLists.txt  dataHashTable.c  dataReceivedCallbackTable.c  gradientTable.c  initMeshSystem.c  inputPacketsHashTable.c  interestCallbackTable.c  interestId.c  neighborsTable.c
MeshDirectedDiffusion/System/include/: InterestId.h  dataHashTable.h  dataReceivedCallbackTable.h  gradientTable.h  inputPacketsHashTable.h  interestCallbackTable.h  meshSystemStruct.h  neighborsTable.h
STM32/: .gitignore  (+1 more)
linuxSimulation/: CMakeLists.txt  README.md  nodeStarter.c  simulation.c  simulationcFileGenerator.lisp  topologySchema
linuxSimulation/simulNodes/: mirrorNode.c  receiverNode.c  relayingNode.c  senderNode.c  simulNodes.h  toMirrorSenderNode.c
linuxSimulation/simulServer/: simulServer.c  simulServer.h
(+29 files in other folders)
